--- a/ChatBot_Hackaton/package.json
+++ b/ChatBot_Hackaton/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "chat-bot-hackaton",
-  "version": "0.0.0",
+  "name": "exe-code-chatbot",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:prod": "ng build --configuration production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:ChatBot_Hackaton": "node dist/chat-bot-hackaton/server/server.mjs"
+    "serve:ssr:ChatBot_Hackaton": "node dist/chat-bot-hackaton/server/server.mjs",
+    "vercel-build": "ng build --configuration production"
   },
   "private": true,
   "dependencies": {
@@ -21,6 +23,8 @@
     "@angular/platform-server": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.17",
+    "@huggingface/inference": "^4.5.3",
+    "cohere-ai": "^7.18.0",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
