--- a/ChatBot_Hackaton/angular.json
+++ b/ChatBot_Hackaton/angular.json
@@ -22,7 +22,9 @@
             "tsConfig": "tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/_redirects",
+              "public/_headers"
             ],
             "styles": [
               "src/styles.css"
